kulso kinezet, alapok

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kemia teszt</title>
+    <link rel="stylesheet" href="format.css">
 </head>
 <body background="red">
-    <h1>
-        teszt szoveg
-    </h1>
+    <header>
+        <h1>
+            teszt szoveg
+        </h1>
+    </header>
+    <div class="slider-thumb"></div>
+    <div class="szoveg">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, ipsam architecto incidunt repudiandae minima amet ea qui natus quisquam debitis nostrum voluptates quibusdam fugiat nisi delectus similique aliquid. Cum, corrupti!
+    </div>
 </body>
 </html>
