--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kemia teszt</title>
@@ -12,9 +15,21 @@
             teszt szoveg
         </h1>
     </header>
-    <div class="slider-thumb"></div>
-    <div class="szoveg">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, ipsam architecto incidunt repudiandae minima amet ea qui natus quisquam debitis nostrum voluptates quibusdam fugiat nisi delectus similique aliquid. Cum, corrupti!
+    <div class="main">
+        <div class="slider-thumb"></div>
+        <div class="szoveg" id="elso">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, ipsam architecto incidunt repudiandae minima amet ea qui natus quisquam debitis nostrum voluptates quibusdam fugiat nisi delectus similique aliquid. Cum, corrupti!
+        </div>
+        <div class="szoveg">
+            otletek
+            <br>
+            <ul>
+                <li>exoterm, endoterm tuz es jeg effektekkel</li>
+                <li>periodusos tabla mi keveredik mivel?</li>
+                <li>oxidaciok</li>
+            </ul>
+        </div>
     </div>
+    
 </body>
 </html>
