--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li>exoterm, endoterm tuz es jeg effektekkel</li>
                 <li>periodusos tabla mi keveredik mivel?</li>
                 <li>oxidaciok</li>
+                <li>kotesek</li>
             </ul>
         </div>
     </div>
