--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Kemia teszt</title>
     <link rel="stylesheet" href="format.css">
 </head>
-<body background="red">
+<body>
     <header>
         <h1>
-            teszt szoveg
+            Index   
         </h1>
     </header>
     <div class="main">
@@ -29,6 +29,17 @@
                 <li>oxidaciok</li>
                 <li>kotesek</li>
             </ul>
+        </div>
+        <div class="gombDoboz">
+            <button class="gomb" id="savak" href="savak.html" onclick="location.href='savak.html'">
+                savak
+            </button>
+            <button class="gomb" id="szenhidrogenek" onclick="location.href='szenhidrogenek.html'">
+                szenhidrogenek
+            </button>
+            <button class="gomb" id="bazisok" onclick="location.href='bazisok.html'">
+                bazisok
+            </button>
         </div>
     </div>
     
