sav es bazis oldalak alapja kialakitva, (nem mukodo) +C es +H gombok

--- a/bazisok.html
+++ b/bazisok.html
@@ -27,11 +27,14 @@
             Bazisok
         </h1>
     </header>
-    <div class="main">
-        <div class="slider-thumb"></div>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate dolorem delectus enim explicabo dicta eos magni ullam quae nulla iure tenetur culpa possimus quia saepe ratione, animi, officia maxime architecto?
+    <div class="container">
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio nam officia odio dignissimos tenetur modi minima optio ipsam libero, officiis assumenda rem nisi totam explicabo recusandae repudiandae velit voluptatibus. Voluptas?
+        </p>
+        <div class="savContainer">
+
+        </div>
     </div>
-    
 </body>
 </html>
 </body>
