--- a/szenhidrogenek.html
+++ b/szenhidrogenek.html
@@ -10,15 +10,24 @@
     <link rel="stylesheet" href="format.css">
     <script src="script.js"></script>
 </head>
-<body background="red">
+<body>
     <header>
         <h1>
             teszt szoveg
         </h1>
+        <h3>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste nihil, perferendis fugit tempora, odio sapiente facilis eveniet mollitia rem incidunt adipisci voluptatum? In, quasi ad ducimus explicabo sint dolore officiis!
+        </h3>
+        <div class="buttonContainer">
+            <p class="hidrogenButton">
+                +H
+            </p>
+            <p class="carbonButton">
+                +C
+            </p>
+        </div>
     </header>
     <div class="main">
-        <div class="szoveg" id="elso"></div>
-
         <div id="square">
     
             <p align="center">C</p>
