uj gombok, vonal dupla klikkre

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Index   
         </h1>
     </header>
-    <div class="main">
+    <div id="main">
         <div class="slider-thumb"></div>
         <div class="szoveg" id="elso">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, ipsam architecto incidunt repudiandae minima amet ea qui natus quisquam debitis nostrum voluptates quibusdam fugiat nisi delectus similique aliquid. Cum, corrupti!
