--- a/szenhidrogenek.html
+++ b/szenhidrogenek.html
@@ -19,21 +19,16 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste nihil, perferendis fugit tempora, odio sapiente facilis eveniet mollitia rem incidunt adipisci voluptatum? In, quasi ad ducimus explicabo sint dolore officiis!
         </h3>
         <div class="buttonContainer">
-            <p class="hidrogenButton">
+            <p id="hidrogenButton">
                 +H
             </p>
-            <p class="carbonButton">
+            <p id="carbonButton">
                 +C
             </p>
         </div>
     </header>
-    <div class="main">
-        <div id="square">
-    
-            <p align="center">C</p>
-
-        </div>
-
+    <div id="main">
+        <p align="center" class="square" id="initialSquare">C</p>
     </div>
     
 </body>
